--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-toast-notification": "^2.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
